--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,8 +114,17 @@ html, body {
   font-family: 'Josefin Sans', sans-serif;
 }
 
+
 header {
+  position: relative;
   height: 110px;
+}
+
+header .logo {
+  position: absolute;
+  top: 5px;
+  left: 15px;
+  z-index: 1000;
 }
 
 nav {
