--- a/public/css/main.css
+++ b/public/css/main.css
@@ -151,6 +151,9 @@ nav li a {
 }
 
 
+#content {
+  padding: 25px;
+}
 
 
 
@@ -291,6 +294,8 @@ Modify as content requires.
   #content {
     font-size: 1.1em;
     padding: 50px;
+    // or
+    padding: 50px 200px;
   }
   /* Style adjustments for viewports that meet the condition */
 }
